packages/llvm/src/tests/variable_declaration/snapshots/llvm__tests__variable_declaration__const_variable_declaration__const _x = trueconst x  = ((_x)) === ((1 !== 2)).snap
---
source: packages/llvm/src/tests/variable_declaration/const_variable_declaration.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %_x_ = alloca i1, align 1
  store i1 true, i1* %_x_, align 1
  %x_ = alloca i1, align 1
  %"2" = load i1, i1* %_x_, align 1
  %"1" = icmp eq i1 %"2", true
  store i1 %"1", i1* %x_, align 1
  ret void
}

